# Aorus-Rag

./: .gitignore  LICENSE  README.md  demo.ipynb  pyproject.toml
data/processed/: chunks.json  faiss.index
data/raw/: spec_page.html  specs.json
scripts/: build_index.py  run.py  test_scrape.py
src/: chunker.py  embedder.py  evaluate.py  generator.py  indexer.py  pipeline.py  scraper.py
tests/: conftest.py  test_cases.json  test_chunker.py  test_evaluate.py  test_generator.py  test_indexer.py  test_pipeline.py  test_retrieval.py  test_scraper.py
