[project]
name = "aorus-rag"
version = "0.1.0"
description = "RAG-based product spec Q&A for GIGABYTE AORUS MASTER 16 AM6H"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "sentence-transformers>=3.0.0",
    "faiss-cpu>=1.9.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "playwright>=1.40.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.7",
    "ty>=0.0.25",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["slow: tests that load the embedding model (skip with -m 'not slow')"]
